# MyAgents

./: .dependency-cruiser.cjs  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  build_dev.sh  build_dev_win.ps1  build_linux.sh  build_macos.sh  build_windows.ps1  eslint.config.js  package-lock.json  package.json  publish_managed_codex_runtime.ps1  publish_managed_codex_runtime.sh  publish_release.sh  publish_windows.ps1  rebuild_clean.ps1  setup.sh  setup_windows.ps1  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml  test.yml
bundled-agents/myagents_helper/: CLAUDE.md
bundled-skills/agent-browser/: SKILL.md
bundled-skills/docx/: SKILL.md  docx-js.md
bundled-skills/hatch-pet/: SKILL.md
bundled-skills/myagents-cli/: SKILL.md
bundled-skills/pptx/: SKILL.md
bundled-skills/prompt-writer/: SKILL.md
bundled-skills/tool-creator/: SKILL.md
scripts/: check-test-classification.mjs  download_cuse.ps1  download_cuse.sh  download_nodejs.sh  ensure_rust_toolchain.ps1  ensure_rust_toolchain.sh  esbuild-bundle.mjs  generate-sdk-shims.ts  package-managed-codex-runtime.mjs  package-managed-codex-spawn.js  setup-tsx-runtime.mjs
specs/: ARCHITECTURE.md  DESIGN.md
specs/guides/: build_and_release_guide.md  build_troubleshooting.md  linux_build_guide.md  windows_build_guide.md
specs/issues/: 215-yuanbao-research-notes.md
specs/playgrounds/: launcher-right-rail-history-playground.html
specs/prd/: analytics_design.md  prd_0.2.31_mino_template_agent_defaults.md  prd_0.2.31_workspace_search_result_navigation.md  prd_0.2.32_perf_architecture_round2.md  prd_0.2.34_agent_sdk_queue_ack_cancel.md  prd_0.2.34_system_preset_workspace_soft_delete.md  prd_0.2.36_analytics_entry_funnel_reliability.md  prd_0.2.36_file_patch_display_protocol.md  prd_0.2.39_session_config_ownership_repair.md  prd_0.2.39_space_issue_interaction_polish.md  prd_0.2.41_mcp_remove_cascade_identity.md  prd_0.2.41_provider_route_identity_architecture.md  prd_0.2.42_openclaw_weixin_stability_architecture.md
specs/tech_docs/: analytics_design.md  auto_update.md  bundled_node.md  cli_architecture.md  i18n_architecture.md  im_integration_architecture.md  macos_arrow_key_leak_investigation.md  multi_agent_runtime.md  pit_of_success.md  plugin_bridge_architecture.md  plugin_loading.md  proxy_config.md  sdk_canUseTool_guide.md  sdk_custom_tools_guide.md  search_architecture.md  session_architecture.md  sidecar_cold_start.md  space_cloud.md  task_provider_routing.md  third_party_providers.md  tool_attachment_pipeline.md  unified_logging.md  windows_ai_review_traps.md  windows_cross_platform_review.md  windows_platform.md
src-tauri/: Cargo.toml  build.rs  clippy.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: hooks.nsh
src-tauri/src/: app_dirs.rs  attachment_protocol.rs  browser.rs  cli.rs  commands.rs  config_io.rs  cron_task.rs  floating_ball.rs  floating_ball_pets.rs  global_shortcut.rs  i18n.rs  legacy_upgrade.rs  lib.rs  litellm_cache.rs  local_http.rs  logger.rs  macos_arrow_filter.rs  macos_traffic_light.rs  managed_codex.rs  management_api.rs  notification.rs  perf_trace.rs  process_cleanup.rs  process_cmd.rs  proxy_config.rs  sidecar.rs  space_cloud.rs  space_cloud_mock.rs  sse_proxy.rs  system_binary.rs  task.rs  terminal.rs  thought.rs  titlebar_drag.rs  tray.rs  updater.rs
src-tauri/src/cron_task/: commands.rs  delivery.rs  execution.rs  init_recovery.rs  manager.rs  run_records.rs  schedule.rs  store.rs  types.rs  validation.rs
src-tauri/src/im/: adapter.rs  agent_channel.rs  bridge.rs  buffer.rs  commands.rs  config_store.rs  dingtalk.rs  enqueue.rs  event_consumer.rs  feishu.rs  group_history.rs  handover.rs  health.rs  heartbeat.rs  memory_update.rs  mod.rs  reply_router.rs  router.rs  runtime_change.rs  state.rs  telegram.rs  types.rs  util.rs
src-tauri/src/inbox/: deliver.rs  mod.rs  types.rs  watch.rs
src-tauri/src/search/: file_indexer.rs  mod.rs  session_indexer.rs  watcher.rs
src-tauri/src/sidecar/: background.rs  cleanup.rs  commands.rs  cron_execute.rs  health.rs  instances.rs  legacy.rs  manager.rs  proxy.rs  runtime_identity.rs  session_lifecycle.rs  shutdown.rs  spawn.rs  stdio.rs  types.rs
src-tauri/src/utils/: bom.rs  file_lock.rs  mod.rs
src-tauri/src/wake_lock/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/workspace_files/: attachment_export.rs  check_paths.rs  claude_md.rs  crud.rs  delete.rs  download.rs  files_b64.rs  git_branch.rs  gitignore.rs  mod.rs  path_safety.rs  platform_blocks.rs  read_preview.rs  save_file.rs  search.rs  skill_sync.rs  skills_config.rs  slash.rs  system_open.rs  test_support.rs  transfer.rs  tree.rs  user_attachments.rs  watcher.rs
src/cli/: myagents.ts
src/renderer/: App.helperLaunch.test.tsx  App.tsx  index.css  main.tsx
src/server/: AgentLogger.ts  SessionStore.ts  UnifiedLogger.ts  admin-api.ts  admin-api.unit.test.ts  agent-session.ts  analytics.ts  dir-info.ts  index.ts  log-retention.ts  logUtils.ts  logger-context.ts  logger.ts  provider-probe.ts  provider-probe.unit.test.ts  provider-verify.ts  queue-response-mode.ts  queue-response-mode.unit.test.ts  session-title-service.ts  sse-instance.ts  sse.ts  subscription-auth.ts  system-prompt-cli-tools.ts  system-prompt-cli-tools.unit.test.ts  system-prompt.ts  system-prompt.unit.test.ts  title-generator.ts  turn-hooks.ts
src/shared/: builtinMediaResult.test.ts  builtinMediaResult.ts  config-types.test.ts  config-types.ts  constants.ts  contextUsage.test.ts  contextUsage.ts  fileChange.test.ts  fileChange.ts  fileTypes.test.ts  fileTypes.ts  i18n.test.ts  i18n.ts  item-name-validation-cases.json  logTime.test.ts  mcpConfig.test.ts  mcpConfig.ts  official-tools.ts  path-safety-blacklist.json  perfTrace.test.ts  perfTrace.ts  providerExecution.test.ts  providerExecution.ts  providerHistory.test.ts  providerHistory.ts  providerRoute.test.ts  providerRoute.ts  reasoningEffort.test.ts  reasoningEffort.ts  runtimeBirthFields.test.ts  runtimeBirthFields.ts  sessionTitle.test.ts  sessionTitle.ts  skillsTypes.ts  (+11 more)
(+1177 files in other folders)
