[package]
name = "myagents"
version = "0.2.6"
description = "MyAgents - Desktop Claude Code for everyone"
authors = ["MyAgents Team <myagents.io@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/hAcKlyc/MyAgents"
homepage = "https://myagents.io"
edition = "2021"
# MSRV note: 1.81 documents `std::fs::rename` as atomic replace-on-existing
# across all platforms (Windows uses MoveFileExW(REPLACE_EXISTING) under the
# hood). Pre-1.81 toolchains keep the historical Windows behavior of failing
# when the destination exists, which corrupts every tmp+rename path in this
# crate (config.json, cron tasks, Task Center storage, IM bot state, …).
# Tauri 2.9 already requires ≥ 1.78, so this bump only formalizes reality.
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.6", features = ["tray-icon", "devtools", "image-png", "unstable", "webview-data-url"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
which = "8.0.0"
libc = "0.2.180"
tauri-plugin-localhost = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
reqwest = { version = "0.13.1", features = ["stream", "json", "blocking", "multipart", "socks"] }
futures-util = "0.3.31"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
futures = "0.3"
base64 = "0.22"
dirs = "6.0"
uuid = { version = "1.11", features = ["v4"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
prost = "0.13"
pulldown-cmark = "0.12"
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "query", "http1"] }
cron = "0.15"
portable-pty = "0.8"
tantivy = "0.22"
tantivy-jieba = "0.11"
notify-debouncer-full = "0.6"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# Pattern 5: stale-lock recovery needs `kill(pid, 0)` for liveness probing on Unix.
# The `signal` feature pulls in just `nix::sys::signal::kill` + `nix::unistd::Pid`,
# nothing else.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

# macOS-only: runtime workaround for AppKit function-key private-use text
# leaking from WKWebView arrow-key handling into focused text controls.
# Keep keyDown flowing through WebKit for caret movement, then clean U+F700-
# U+F74F from the DOM value when the leak happens.
# See tauri-apps/tauri#5685, tauri-apps/wry#769, tauri-apps/tauri#10194.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
objc2-web-kit = { version = "0.3.2", features = ["WKWebView", "block2"] }

# Pattern 5: Windows pid-liveness + start-time probe via OpenProcess +
# GetProcessTimes (PROCESS_QUERY_LIMITED_INFORMATION). Minimal feature set —
# version 0.59 is already pulled transitively, so no new lock entry.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile = "3.10"
