[package]
name = "myagents"
version = "0.2.40"
description = "MyAgents - Desktop Claude Code for everyone"
authors = ["MyAgents Team <myagents.io@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/hAcKlyc/MyAgents"
homepage = "https://myagents.io"
edition = "2021"
# MSRV note: 1.81 documents `std::fs::rename` as atomic replace-on-existing
# across all platforms (Windows uses MoveFileExW(REPLACE_EXISTING) under the
# hood). Pre-1.81 toolchains keep the historical Windows behavior of failing
# when the destination exists, which corrupts every tmp+rename path in this
# crate (config.json, cron tasks, Task Center storage, IM bot state, …).
# Tauri 2.9 already requires ≥ 1.78, so this bump only formalizes reality.
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
url = "2"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
# `macos-private-api` is required for transparent webview windows on macOS —
# the floating ball / companion panels (PRD 0.2.35) are transparent NSPanels.
# Main window is unaffected (it never sets transparent(true)).
tauri = { version = "2.9.6", features = ["tray-icon", "devtools", "image-png", "unstable", "webview-data-url", "macos-private-api", "protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2.6.0"
which = "8.0.0"
libc = "0.2.180"
tauri-plugin-localhost = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-global-shortcut = "2"
reqwest = { version = "0.13.1", features = ["stream", "json", "blocking", "multipart", "socks"] }
futures-util = "0.3.31"
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
futures = "0.3"
base64 = "0.22"
dirs = "6.0"
uuid = { version = "1.11", features = ["v4"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
prost = "0.13"
pulldown-cmark = "0.12"
# YAML frontmatter parsing for slash command / skill SKILL.md files (workspace_files::slash)
serde_yaml = "0.9"
# Fuzzy file name search for @ mention picker — small dependency, used only inside workspace_files::search
fuzzy-matcher = "0.3"
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "query", "http1"] }
cron = "0.15"
portable-pty = "0.8"
tantivy = "0.22"
tantivy-jieba = "0.11"
notify-debouncer-full = "0.6"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }
trash = "5.2.3"
image = { version = "0.25.10", default-features = false, features = ["png", "webp"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate-zlib"] }

# Pattern 5: stale-lock recovery needs `kill(pid, 0)` for liveness probing on Unix.
# The `signal` feature pulls in just `nix::sys::signal::kill` + `nix::unistd::Pid`,
# nothing else.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

# macOS-only: runtime workaround for AppKit function-key private-use text
# leaking from WKWebView arrow-key handling into focused text controls.
# Keep keyDown flowing through WebKit for caret movement, then clean U+F700-
# U+F74F from the DOM value when the leak happens.
# See tauri-apps/tauri#5685, tauri-apps/wry#769, tauri-apps/tauri#10194.
[target.'cfg(target_os = "macos")'.dependencies]
# Floating ball (PRD 0.2.35): NSPanel windows that never activate the app.
# Git branch dependency (not on crates.io) — pinned to a commit per PRD §10.
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", rev = "a3122e894383aa068ec5365a42994e3ac94ba1b6" }
# Frontmost app / window title probe (zero-permission context, PRD §5.1).
active-win-pos-rs = "0.11"
# CGDisplay 枚举（线程安全，不碰 NSScreen/MainThreadMarker）：📷 截"前台
# 窗口所在的那块显示器"用——与 active-win-pos-rs 的 kCGWindowBounds 同
# CG 坐标空间。版本对齐 lock 里既有传递依赖（0.22），零新增编译单元。
core-graphics = "0.22"
# Selected-text capture: AX API first, clipboard round-trip fallback. Only
# ever invoked on explicit summon (PRD D3 red line), never on hover.
get-selected-text = "0.1"
# AXIsProcessTrusted probe + one-shot system prompt for the permission flow.
macos-accessibility-client = "0.0.1"
objc2 = "0.6"
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
objc2-web-kit = { version = "0.3.2", features = ["WKWebView", "block2"] }
# `macos_traffic_light::apply_inset` — replicates wry/tao internal
# `inset_traffic_lights` against the post-build NSWindow because Tauri 2.10.x
# `WebviewWindowBuilder::traffic_light_position` only writes the webview side
# (see module docstring). Same crate version (0.3.2) as the other objc2-*
# deps above; transitively pulled already by wry — adding it directly so we
# can import the AppKit types.
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSWindow", "NSView", "NSResponder", "NSButton", "NSControl", "std"] }

# Windows platform APIs:
# - pid-liveness/start-time probes via PROCESS_QUERY_LIMITED_INFORMATION
# - floating-ball tool-window styles, no-activate behavior, focus restoration
# - wake-lock power requests below
# Minimal feature set — version 0.59 is already pulled transitively, so no new lock entry.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    # `wake_lock::windows::PlatformImpl` calls `PowerCreateRequest` +
    # `PowerSetRequest` (PowerRequestSystemRequired | PowerRequestAwayModeRequired)
    # to keep the OS from idle-sleeping during long-running cron tasks.
    # HANDLE-based on purpose — `SetThreadExecutionState` is per-thread and
    # silently leaks the assertion across Tokio worker resumption; see
    # `src/wake_lock/windows.rs` for the trade-off.
    "Win32_System_Power",
] }
# `junction` creates NTFS directory junctions without admin / Developer Mode
# (`std::os::windows::fs::symlink_dir` would otherwise need ERROR_PRIVILEGE_NOT_HELD
# elevated rights). Used by `workspace_files::skill_sync` to mirror
# user-level skills into `<workspace>/.claude/skills/` — the Node.js
# sidecar uses `symlinkSync(target, link, 'junction')` for the same reason.
junction = "1.0"
# WinRT toast notifications with click activation. `tauri-plugin-notification`
# wraps this same crate but doesn't expose the `on_activated` callback we need
# to bring the app to the foreground when the user clicks a toast. Promoting
# it to a direct dependency lets `notification::show_with_navigation` register
# the callback ourselves while still sharing the version locked in the dep
# graph (notify-rust pulls 0.7.x transitively).
tauri-winrt-notification = "0.7"

[dev-dependencies]
tempfile = "3.10"
